--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,31 @@
   display: none;
 }
 
+.block {
+  display: block;
+}
+
+:root {
+  --bg-color: #f9f9fa;
+  --qirmizi-color: #ec3342;
+  --aciq-mavi: #a5a4ff;
+  --tund-bg-color: #caccd0;
+  --green-color: #1eff00;
+  --tund-bg-color: #f2f2f2;
+}
+
+.italic {
+  font-style: italic;
+  font-weight: 800;
+}
+
+.last {
+  list-style: disc;
+  padding: 5px 0;
+  font-size: 16px;
+  margin-left: 15px;
+}
+
 .header-contain {
   width: 100%;
 }
@@ -255,13 +280,21 @@
   border: none;
   background-color: #f9f9fa;
 }
-.slider .contain .btn-next {
-  right: 45px;
-  bottom: 25px;
-}
 .slider .contain .btn-prev {
   right: 80px;
   bottom: 25px;
+}
+
+.swiper-button-next::after {
+  position: absolute !important;
+  right: 150px !important;
+  color: rgba(0, 0, 0, 0.4588235294);
+}
+
+.swiper-button-prev::after {
+  position: absolute !important;
+  left: 150px !important;
+  color: rgba(0, 0, 0, 0.4588235294);
 }
 
 .service {
@@ -726,6 +759,7 @@
 
 .loan {
   width: 100%;
+  margin-bottom: 50px;
 }
 .loan_container {
   width: 60%;
@@ -775,6 +809,7 @@
   flex-direction: column;
   padding: 30px 0;
   row-gap: 5px;
+  margin-bottom: 30px;
 }
 .loan_container_contain .bottom .telinp {
   border-radius: 17px;
@@ -796,7 +831,10 @@
   outline: none;
   font-weight: 600;
   color: #fff;
-  cursor: no-drop;
+  cursor: pointer;
+}
+.loan_container_contain .bottom .btn:hover {
+  background-color: #bc0c19;
 }
 .loan_container_bottom {
   font-family: sans-serif;
@@ -945,6 +983,23 @@
 .partnyorlar_container .items .item .text p {
   font-size: 12px;
 }
+.partnyorlar .dahacox {
+  width: 200px;
+  display: flex;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 600;
+  color: #fff;
+  justify-content: center;
+  margin: 45px auto;
+  background-color: var(--qirmizi-color);
+  border-radius: 5px;
+  border: none;
+  height: 40px;
+}
+.partnyorlar .dahacox:hover {
+  background-color: #bc0c19;
+}
 
 .partnyorname {
   font-family: sans-serif;
@@ -1000,6 +1055,15 @@
   opacity: 0.7;
 }
 
+.actives {
+  background-color: rgb(79, 79, 79) !important;
+  color: #fff;
+}
+
+.cardid {
+  margin: 20px 0;
+  font-family: sans-serif;
+}
 .cardid .reklam {
   row-gap: 25px;
   width: 100%;
@@ -1057,6 +1121,10 @@
   text-align: center;
   background-color: #e7e8ea;
 }
+.cardid .reklam_container_contain .bottom .title {
+  padding-top: 20px;
+  margin-bottom: 20px;
+}
 .cardid .reklam_container_contain .bottom .telinp {
   border-radius: 17px;
   width: 240px;
@@ -1066,6 +1134,23 @@
   border: none;
   box-shadow: 0px 1px 3px 0px;
   outline: none;
+}
+.cardid .reklam_container_contain .bottom .submit {
+  margin: 25px 0;
+  height: 50px;
+  width: 220px;
+  cursor: pointer;
+  padding: 0px 30px;
+  background-color: #ec3342;
+  border: 1px solid #ec3342;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  border-radius: 17px;
+  line-height: 14px;
+}
+.cardid .reklam_container_contain .bottom .submit:hover {
+  background-color: #bc0c19;
 }
 .cardid .reklam_container_bottom {
   font-family: sans-serif;
@@ -1101,6 +1186,9 @@
   row-gap: 25px;
   width: 60%;
   margin: 0 auto;
+}
+.cardid .text .h1 {
+  margin-top: 20px;
 }
 .cardid .text .mil {
   display: flex;
@@ -1146,13 +1234,6 @@
 .sablon .ana_page i {
   font-size: 10px;
   margin: 0 15px;
-}
-
-.last {
-  list-style: disc;
-  padding: 5px 0;
-  font-size: 16px;
-  margin-left: 15px;
 }
 
 .kampaniya .container {
@@ -1328,12 +1409,8 @@
   margin-right: 15px;
 }
 
-.italic {
-  font-style: italic;
-  font-weight: 800;
-}
-
 .loan_calculator {
+  font-family: sans-serif;
   width: 100%;
   background-color: var(--bg-color);
 }
@@ -1346,6 +1423,8 @@
 .loan_calculator_container .left {
   width: 50%;
   padding: 35px;
+  font-weight: 600;
+  font-size: 20px;
 }
 .loan_calculator_container .left .input_container .inputs {
   margin: 30px 0;
@@ -1363,73 +1442,338 @@
   background-color: var(--tund-bg-color);
   border-radius: 5px;
 }
+.loan_calculator_container .right button {
+  margin-top: 40px;
+  height: 40px;
+  padding: 0px 30px;
+  width: -moz-max-content;
+  width: max-content;
+  background-color: #ec3342;
+  border: 1px solid #ec3342;
+  border-radius: 36px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 14px;
+}
+.loan_calculator_container .right button:hover {
+  background-color: #bc0c19;
+}
 
 .odenis_info {
   background-color: var(--tund-bg-color);
   width: 100%;
   display: flex;
-}
-.odenis_info .left {
-  width: 350px;
-  margin: 20px;
-  opacity: 0.7;
-  font-family: sans-serif;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
-}
-.odenis_info .left .container {
-  width: 100%;
-  height: 50px;
-  font-size: 15px;
-  display: flex;
-  align-items: center;
-  border-radius: 5px;
-}
-.odenis_info .left .container:hover {
-  background-color: #ffffff;
-  cursor: pointer;
-}
-.odenis_info .left .container .icon {
-  width: 40px;
-  display: flex;
-  margin: 0 15px;
-}
-.odenis_info .left .container i {
-  font-size: 23px;
-  margin: 0 auto;
+  gap: 20px;
 }
 .odenis_info .right {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  height: 450px;
   margin: 20px 0;
-  width: 100%;
+  width: 70%;
+  row-gap: 25px;
 }
 .odenis_info .right .odenis_info_item {
   font-family: sans-serif;
   background-color: rgb(255, 255, 255);
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
-  row-gap: 20px;
   width: 400px;
   height: 200px;
   margin-right: 25px;
+  position: relative;
+}
+.odenis_info .right .odenis_info_item .foto {
+  width: 100px;
+  text-align: center;
+  margin: 0 auto;
 }
 .odenis_info .right .odenis_info_item img {
   width: 100px;
-  margin: 0 auto;
+  margin-top: 35px;
 }
-.odenis_info .right .odenis_info_item p {
-  margin: 0 auto;
-  font-size: 14px;
+.odenis_info .right .odenis_info_item .name {
+  text-align: center;
+  font-size: 17px;
+  font-weight: 600;
+  opacity: 0.7;
   color: #000;
+  bottom: 15px;
+  position: absolute;
+  width: 100%;
 }
 
-:root {
-  --bg-color: #f9f9fa;
-  --qirmizi-color: #ec3342;
-  --aciq-mavi: #a5a4ff;
-  --tund-bg-color: #caccd0;
-  --green-color: #1eff00;
-  --tund-bg-color:#f2f2f2;
+.companent {
+  background-color: var(--tund-bg-color);
+  width: 350px;
+  margin-right: 40px;
+  padding: 20px 0 0 20px;
+  font-family: sans-serif;
+  display: flex;
+  flex-direction: column;
+  row-gap: 20px;
+}
+.companent .active {
+  background-color: #fff;
+  color: #000;
+}
+.companent .container {
+  color: #000;
+  width: 100%;
+  height: 50px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  border-radius: 5px;
+}
+.companent .container:hover {
+  background-color: #fff;
+  cursor: pointer;
+}
+.companent .container .icon {
+  width: 40px;
+  display: flex;
+  margin: 0 15px;
+}
+.companent .container i {
+  font-size: 23px;
+  margin: 0 auto;
+}
+
+.ss {
+  display: flex;
+  font-family: sans-serif;
+}
+.ss .up {
+  margin: 20px;
+  display: flex;
+  align-items: center;
+}
+.ss .up_img {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+.ss .up_text {
+  margin: 20px;
+}
+.ss .teyinat {
+  display: flex;
+  flex-direction: column;
+  row-gap: 25px;
+}
+.ss .teyinat select {
+  height: 40px;
+  width: 350px;
+  outline: none;
+  border: 1px solid rgba(0, 0, 0, 0.1215686275);
+  font-size: 15px;
+  padding-left: 15px;
+}
+.ss .teyinat .inptext {
+  width: 350px;
+  border: 1px solid rgba(0, 0, 0, 0.1215686275);
+  height: 40px;
+  padding: 15px;
+  outline: none;
+  font-size: 15px;
+}
+.ss .prev {
+  width: 150px;
+  border: none;
+  background-color: #cacaca;
+  color: #000;
+  font-weight: 600;
+  padding: 10px 40px;
+  font-size: 16px;
+  margin-top: 24px;
+  min-height: 51px;
+  margin-right: 25px;
+}
+.ss .next {
+  width: 170px;
+  border: none;
+  background-color: #ec3342;
+  color: #fff;
+  font-weight: 600;
+  padding: 10px 40px;
+  font-size: 16px;
+  margin-top: 24px;
+  min-height: 51px;
+}
+
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  background: #fff;
+  /* Center slide text vertically */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+#myBtn {
+  display: block; /* Hidden by default */
+  position: fixed; /* Fixed/sticky position */
+  bottom: 20px; /* Place the button at the bottom of the page */
+  right: 30px; /* Place the button 30px from the right */
+  z-index: 99; /* Make sure it does not overlap */
+  border: none; /* Remove borders */
+  outline: none; /* Remove outline */
+  background-color: red; /* Set a background color */
+  color: white; /* Text color */
+  cursor: pointer; /* Add a mouse pointer on hover */
+  padding: 15px; /* Some padding */
+  border-radius: 50%; /* Rounded corners */
+  font-size: 18px; /* Increase font size */
+  width: 50px;
+  height: 50px;
+}
+
+#myBtn:hover {
+  background-color: #555; /* Add a dark-grey background on hover */
+}
+
+.register {
+  width: 100%;
+  font-family: sans-serif;
+}
+.register .rule {
+  margin-left: 40px;
+  font-size: 12px;
+  width: 85%;
+  margin-bottom: 25px;
+}
+.register .qeydiyyat {
+  font-family: sans-serif;
+  text-align: center;
+  color: var(--qirmizi-color);
+  margin-bottom: 50px;
+}
+.register_container {
+  display: flex;
+  width: 100%;
+}
+.register_container .right {
+  width: 25%;
+  display: flex;
+  flex-direction: column;
+}
+.register_container .left {
+  width: 70%;
+}
+.register_container img {
+  width: 100%;
+}
+.register input,
+.register button {
+  margin: 0 auto;
+  width: 400px;
+  border-radius: 5px;
+  height: 60px;
+  outline: none;
+}
+.register input {
+  padding-left: 10px;
+  border: 2px solid var(--qirmizi-color);
+  margin-bottom: 20px;
+}
+.register button {
+  background-color: #009ff7;
+  color: #fff;
+  font-size: 18px;
+  font-weight: 600;
+  border: none;
+}
+.register button:hover {
+  opacity: 0.7;
+}
+
+.tetbiq {
+  width: 100%;
+  display: flex;
+  font-family: sans-serif;
+}
+.tetbiq .left {
+  width: 45%;
+  display: flex;
+  flex-direction: column;
+  row-gap: 50px;
+  margin: 50px;
+  padding: 50px;
+}
+.tetbiq .left h1 {
+  font-size: 40px;
+}
+.tetbiq .left .about {
+  width: 80%;
+}
+.tetbiq .left .qrcode {
+  width: 110px;
+}
+.tetbiq .left .social {
+  display: flex;
+  flex-direction: column;
+}
+.tetbiq .left .social .apps-item {
+  color: #fff;
+  background-color: #25282b;
+  width: 192px;
+  height: 60px;
+  border: 1px solid #fff;
+  border-radius: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.tetbiq .left .social .apps-item i {
+  font-size: 30px;
+  margin-right: 10px;
+  color: #ec3342;
+}
+.tetbiq .left .social .apps-item p {
+  font-weight: 700;
+  font-size: 18px;
+}
+.tetbiq .left .social .apps-item p span {
+  font-size: 12px;
+  font-weight: 100;
+}
+.tetbiq .right {
+  background-color: whitesmoke;
+  width: 55%;
+}
+.tetbiq .right img {
+  width: 100%;
+}
+
+.DarkLight {
+  display: inline-block;
+  margin-top: 20px;
+}
+.DarkLight .enke {
+  width: 50px;
+  height: 30px;
+  border-radius: 37px;
+  background-color: rgba(0, 0, 0, 0.5882352941);
+  cursor: pointer;
+}
+.DarkLight .enke .z {
+  width: 30px;
+  transition: all 0.5s;
+  height: 30px;
+  border-radius: 37px;
+  background-color: var(--tund-bg-color);
+}
+
+.dark {
+  background-color: rgb(59, 59, 59);
+  color: #fff;
 }/*# sourceMappingURL=App.css.map */
